<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btnOrder"
        android:layout_width="124dp"
        android:layout_height="151dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:adjustViewBounds="false"
        android:background="#9567EC"
        android:cropToPadding="false"
        android:onClick="OrderClicked"
        android:scaleType="fitStart"
        android:src="@drawable/cutlery"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnMenu"
        android:layout_width="137dp"
        android:layout_height="156dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="false"
        android:background="#9567EC"
        android:cropToPadding="false"
        android:onClick="MenuClicked"
        android:scaleType="centerInside"
        android:src="@drawable/menu"
        android:textAlignment="textEnd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="137dp"
        android:layout_height="134dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:background="#9567EC"
        android:onClick="TableViewClicked"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenu"
        app:srcCompat="@drawable/table" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="@+id/btnOrder"
        app:layout_constraintEnd_toEndOf="@+id/btnOrder"
        app:layout_constraintStart_toStartOf="@+id/btnOrder" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/table_view"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="@+id/imageButton" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="120dp"
        android:layout_height="133dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:background="#9567EC"
        android:onClick="BillClicked"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOrder"
        app:srcCompat="@drawable/receipt" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="@+id/imageButton2" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="131dp"
        android:layout_height="146dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:background="#9567EC"
        android:onClick="TrackClicked"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@drawable/group" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="@+id/imageButton3" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="119dp"
        android:layout_height="138dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:background="#9567EC"
        android:onClick="EditClicked"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:srcCompat="@drawable/order" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_orders"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton5"
        app:layout_constraintEnd_toEndOf="@+id/imageButton5"
        app:layout_constraintStart_toStartOf="@+id/imageButton5" />

</androidx.constraintlayout.widget.ConstraintLayout>